CHANGES IN VERSION 1.2.2
------------------------
 o add tree annotation functions <2014-11-21, Fri>
   + main function of annotating tree
   + netNglyc related functions
 o add man files of tree annotation functions <2014-11-21, Fri>
 o matrix2vector.phyDat: convert phyDat object from matrix to vector format <2014-11-21, Fri>
 
CHANGES IN VERSION 1.2.0
------------------------
 o add some eye candy, print cartoon when function exit <2014-11-21, Fri>
 o add verbose information in generateGapFile function <2014-11-21, Fri>

CHANGES IN VERSION 1.1.5
------------------------
 o import readBStringSet for compatible of X or N  and other characters
   in DNA sequence <2014-11-20, Thu>

CHANGES IN VERSION 1.1.4
------------------------
 o fixed mising mixed in generateGaps <2014-11-20, Thu>

CHANGES IN VERSION 1.1.2
------------------------
 o add update_skleid <2014-11-20, Thu>

CHANGES IN VERSION 1.1.1
------------------------
 o add 'Gaps:' in gap range <2014-10-13, Thu>
 o cowsay done... <2014-10-10, Mon>
 o addKeywordFASTA function <2014-10-05, Wed>

CHANGES IN VERSION 1.1.0
------------------------
 o alignment sequence generated in alignment folder and add link in the report <2014-10-29, Wed>
 o bug fixed in doAlign <2014-10-29, Wed>

CHANGES IN VERSION 1.0.1
------------------------
 o support ID like RL10NA_xxx.fasta <2014-10-22, Wed>

CHANGES IN VERSION 1.0.0
------------------------
 o fixed in mixedFileReport <2014-10-22, Wed>

CHANGES IN VERSION 0.99.0
------------------------
 o split autoReport to small functions, more easy to maintain <2014-10-15, Wed>
 o parse mixed folder if exists, not need to put them back to contig.folder when re-run <2014-10-15, Wed>
 o add get_skleid.R and the package now can be install via:
     source("http://ygc.name/get_skleid.R")
 o export generateGapFile <2014-10-15, Wed>

CHANGES IN VERSION 0.4.2
------------------------
 o add generateGapFile <2014-10-14, Tue>

CHANGES IN VERSION 0.4.1
------------------------