@@ -19,6 +19,7 @@ export(removeSeq)
 export(revcomp)
 export(translateSeq)
 export(treeAnno)
+export(treeAnno.phyDat)
 export(update_skleid)
 export(writeAlignedSeq)
 export(writeConsensus)
