@@ -1,10 +1,11 @@
 CHANGES IN VERSION 1.2.2
 ------------------------
+ o treeAnno.phyDat for using phyDat data to annotate tree with substitution <2014-11-22, Sat>
+ o matrix2vector.phyDat: convert phyDat object from matrix to vector format <2014-11-21, Fri>
+ o add man files of tree annotation functions <2014-11-21, Fri>
  o add tree annotation functions <2014-11-21, Fri>
    + main function of annotating tree
    + netNglyc related functions
- o add man files of tree annotation functions <2014-11-21, Fri>
- o matrix2vector.phyDat: convert phyDat object from matrix to vector format <2014-11-21, Fri>
  
 CHANGES IN VERSION 1.2.0
 ------------------------
